--- a/Lab_5_1_Demand_Forecasting_in_Supply_Chain_Management.ipynb
+++ b/Lab_5_1_Demand_Forecasting_in_Supply_Chain_Management.ipynb
@@ -12,14 +12,14 @@
         "\n",
         "**Lab Title:** To forecast future values of a univariate time series using LSTM-based models.\n",
         "\n",
-        "**Student Name:** Suraj Sanjay Didwagh\n",
+        "**Student Name:** Shriram Savant\n",
         "\n",
-        "**Student ID:** 202201040126\n",
+        "**Student ID:** 202201040124\n",
         "\n",
         "**Date of Submission:** 10/04/2025\n",
         "\n",
         "**Group Members**:\n",
-        "1. Shriram Savant\n",
+        "1. Suraj Didwagh\n",
         "2. Prathamesh Galugade\n",
         "3. Punit Kawadkar\n",
         "\n",
@@ -1488,11 +1488,11 @@
       "source": [
         "### **Declaration**\n",
         "\n",
-        "I,Suraj Didwaghr, confirm that the work submitted in this assignment is my own and has been completed following academic integrity guidelines. The code is uploaded on my GitHub repository account, and the repository link is provided below:\n",
+        "I,Shriram Savant, confirm that the work submitted in this assignment is my own and has been completed following academic integrity guidelines. The code is uploaded on my GitHub repository account, and the repository link is provided below:\n",
         "\n",
-        "GitHub Repository Link:  https://github.com/surajdidwagh/Lab-Assignment-5.1---Demand-Forecasting-in-Supply-Chain-Management.git\n",
+        "GitHub Repository Link:  https://github.com/Ramraje1919/Pratical_NO5.1.git\n",
         "\n",
-        "Signature: Suraj Didwagh"
+        "Signature: Shriram Savant"
       ]
     },
     {
